# Brazil-RV

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: instruments.yaml  paths.yaml  project.yaml  timing.yaml
docs/: ANBIMA_SOURCE_MAP.md  ANP_RAW_TO_RESEARCH_SPINE.md  ANP_SOURCE_MAP.md  B3_INGESTION_SETUP.md  B3_P1_P2_SOURCE_MAP.md  B3_RAW_TO_RESEARCH_SPINE.md  BCB_RAW_TO_RESEARCH_SPINE.md  BCB_SGS_MODEL_READY_DECISIONS.md  BCB_SOURCE_MAP.md  CVM_RAW_TO_RESEARCH_SPINE.md  CVM_SOURCE_MAP.md  ENGINEERING_GUIDELINES.md  FEATURE_PREPROCESSING_METADATA_CONTRACT.md  FEATURE_UPGRADES_CONTRACT.md  FRED_RAW_TO_RESEARCH_SPINE.md  FRED_SOURCE_MAP.md  IBGE_RAW_TO_RESEARCH_SPINE.md  IBGE_SOURCE_MAP.md  MODEL_DATASET_SPLIT_CONTRACT.md  NOVO_CAGED_RAW_TO_RESEARCH_SPINE.md  NOVO_CAGED_SOURCE_MAP.md  ONS_RAW_TO_RESEARCH_SPINE.md  ONS_SOURCE_MAP.md  PROJECT_PLAN.md  RECEITA_RAW_TO_RESEARCH_SPINE.md  RECEITA_SOURCE_MAP.md  REVISION_AND_VINTAGE_POLICY.md  TESOURO_RAW_TO_RESEARCH_SPINE.md  TESOURO_SOURCE_MAP.md  TIMING_AND_AVAILABILITY_POLICY.md
tests/: test_anbima_downloads.py  test_anbima_market_normalization.py  test_anbima_source_map.py  test_anbima_tabular_parsing.py  test_anp_daily_long_panel.py  test_anp_downloads.py  test_anp_fuel_features.py  test_anp_fuel_normalization.py  test_anp_fuel_price_research_panels.py  test_anp_fuel_sales_research_panels.py  test_anp_ingest_pipeline.py  test_anp_oil_gas_research_panels.py  test_anp_research_spine_io.py  test_anp_resources.py  test_anp_source_map.py  test_anp_tabular_parsing.py  test_b3_continuous_futures.py  test_bcb_ptax.py  (+108 more)
(+251 files in other folders)
