[project]
name = "brazil-rv"
version = "0.1.0"
description = "Free-data daily systematic macro research pipeline for Brazilian futures."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "polars>=1.0",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
    "typer>=0.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
